--- a/i18n/auth/en.json
+++ b/i18n/auth/en.json
@@ -96,6 +96,10 @@
     "ENABLE_MFA": "Enable MFA",
     "DISABLE_MFA": "Disable MFA",
     "DISABLE_MFA_I": "Disable MFA or change your authenticator app",
-    "DISABLE_MFA_II": "Insert the One-Time Password (OTP) provided by your authenticator app to disable the multi-factor authentication (MFA) in your account."
+    "DISABLE_MFA_II": "Insert the One-Time Password (OTP) provided by your authenticator app to disable the multi-factor authentication (MFA) in your account.",
+    "EDIT_EMAIL": "Edit email address",
+    "CONTINUE": "Continue",
+    "CONTINUE_HINT": "Continue the sign-in with the selected email",
+    "UNKNOWN_PROVIDER": "Unknown sign-in provider"
   }
 }
