--- a/i18n/common/it.json
+++ b/i18n/common/it.json
@@ -9,6 +9,7 @@
       "EVERYTHING_IS_OK": "Tutto ok!"
     },
     "ATTACHMENTS": {
+      "ATTACHMENTS": "Allegati",
       "ERROR_UPLOADING_ATTACHMENT": "Errore durante il caricamento dell'allegato",
       "HIDE_ERROR": "Nascondi errore",
       "DOWNLOAD_ATTACHMENT": "Scarica allegato",
