--- a/i18n/common/it.json
+++ b/i18n/common/it.json
@@ -42,7 +42,8 @@
       "NUM_ELEMENTS_SELECTED": "{{num}} elementi selezionati",
       "RESET": "Reset",
       "SEARCH": "Ricerca",
-      "SELECT_ALL": "Seleziona tutto"
+      "SELECT_ALL": "Seleziona tutto",
+      "SHOW_ONLY_CHECKED": "Mostra solo selezionati"
     },
     "CUSTOM_FIELDS": {
       "ADD_FIELD": "Aggiungi un campo",
